--- a/zero-downtime-soa-dependencies/pom.xml
+++ b/zero-downtime-soa-dependencies/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>groupId</groupId>
+	<groupId>zero.downtime.soa</groupId>
 	<artifactId>zero-downtime-soa-dependencies</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>kar</packaging>
