--- a/hello-service-api/pom.xml
+++ b/hello-service-api/pom.xml
@@ -10,7 +10,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>hello-service-api</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>Hello Service REST API</name>
 	<description>Rest DSL API using jetty</description>
 
