Fix pom version for dependencies module

--- a/zero-downtime-soa-dependencies/pom.xml
+++ b/zero-downtime-soa-dependencies/pom.xml
@@ -9,9 +9,8 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>zero.downtime.soa</groupId>
 	<artifactId>zero-downtime-soa-dependencies</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>kar</packaging>
 
 	<name>Zero Downtime SOA Dependencies</name>
