--- a/hello-service-api/pom.xml
+++ b/hello-service-api/pom.xml
@@ -23,6 +23,10 @@
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-jetty</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-kafka</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
