--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<hamcrest.version>1.3</hamcrest.version>
 		<karaf.version>3.0.3</karaf.version>
 		<surefire.failsafe.version>2.17</surefire.failsafe.version>
+		<scala.version>2.10.4</scala.version>
 	</properties>
 	<name>Zero Downtime SOA</name>
 	<url>https://github.com/robgmills/zero-downtime-soa</url>
@@ -83,6 +84,32 @@
 			<dependency>
 				<groupId>org.apache.camel</groupId>
 				<artifactId>camel-jetty</artifactId>
+				<version>${camel.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.camel</groupId>
+				<artifactId>camel-kafka</artifactId>
+				<version>${camel.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>com.sun.jmx</groupId>
+						<artifactId>jmxri</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>com.sun.jdmk</groupId>
+						<artifactId>jmxtools</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>javax.jms</groupId>
+						<artifactId>jms</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.camel</groupId>
+				<artifactId>camel-scala</artifactId>
 				<version>${camel.version}</version>
 			</dependency>
 
