Update lock location and instance names

--- a/config/karaf/master/system.properties
+++ b/config/karaf/master/system.properties
@@ -33,7 +33,7 @@ org.ops4j.pax.logging.DefaultServiceLog.level = ERROR
 #
 # Name of this Karaf instance.
 #
-karaf.name = slave-0
+karaf.name = master
 
 #
 # Default repository where bundles will be loaded from before using
@@ -125,5 +125,5 @@ karaf.secured.services = (&(osgi.command.scope=*)(osgi.command.function=*))
 
 karaf.lock=true
 karaf.lock.class=org.apache.karaf.main.lock.SimpleFileLock
-karaf.lock.dir=/opt/apache-karaf-3.0.3/instances/master/bin
+karaf.lock.dir=/tmp
 karaf.lock.delay=10
